cluster/manifests/httpbin/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: httpbin
  labels:
    name: httpbin
    pod-security.kubernetes.io/enforce: restricted
