cluster/manifests/httpbin/overlays/dev/peer_authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: httpbin-istio
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: httpbin-istio
  mtls:
    mode: STRICT
