cluster/manifests/httpbin/overlays/dev/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: httpbin
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - httpbin.minikube.127.0.0.1.nip.io
      port:
        number: 80
        name: http
        protocol: HTTP
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: httpbin-istio
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - httpbin-istio.minikube.127.0.0.1.nip.io
      port:
        number: 80
        name: http
        protocol: HTTP
