cluster/manifests/httpbin/overlays/dev/destination_rule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: httpbin
spec:
  host: httpbin
  trafficPolicy:
    outlierDetection:
      consecutive5xxErrors: 5
      interval: 1m
      baseEjectionTime: 1m
      maxEjectionPercent: 100
      minHealthPercent: 0
  subsets:
    - name: default
      trafficPolicy:
        loadBalancer:
          simple: LEAST_REQUEST
          localityLbSetting:
            enabled: true
            failoverPriority:
              - kubernetes.io/hostname
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: httpbin-istio
spec:
  host: httpbin-istio
  trafficPolicy:
    outlierDetection:
      consecutive5xxErrors: 5
      interval: 1m
      baseEjectionTime: 1m
      maxEjectionPercent: 100
      minHealthPercent: 0
  subsets:
    - name: default
      trafficPolicy:
        loadBalancer:
          simple: LEAST_REQUEST
          localityLbSetting:
            enabled: true
            failoverPriority:
              - kubernetes.io/hostname
