cluster/manifests/httpbin/overlays/dev/envoy_filter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: httpbin-istio-ratelimit
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/component: httpbin-istio
  configPatches:
    - applyTo: HTTP_FILTER
      match:
        context: SIDECAR_INBOUND
        listener:
          filterChain:
            filter:
              name: envoy.filters.network.http_connection_manager
              subFilter:
                name: envoy.filters.http.router
      patch:
        operation: INSERT_BEFORE
        value:
          name: envoy.filters.http.ratelimit
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimit
            domain: general
            failure_mode_deny: false
            timeout: 1s
            rate_limit_service:
              grpc_service:
                envoy_grpc:
                  cluster_name: outbound|8081||envoy-ratelimit.envoy-ratelimit.svc.cluster.local
                  authority: envoy-ratelimit.envoy-ratelimit.svc.cluster.local
              transport_api_version: V3
    - applyTo: VIRTUAL_HOST
      match:
        context: SIDECAR_INBOUND
        routeConfiguration:
          vhost:
            route:
              action: ANY
      patch:
        operation: MERGE
        value:
          # https://www.envoyproxy.io/docs/envoy/latest/api-v3/config/route/v3/route_components.proto#envoy-v3-api-msg-config-route-v3-ratelimit
          rate_limits:
            - actions:
                - header_value_match:
                    descriptor_key: User-Agent
                    descriptor_value: ^.*[Bb]ot.*$
                    headers:
                      - name: user-agent
                        string_match:
                          safe_regex:
                            google_re2: {}
                            regex: ^.*[Bb]ot.*$
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: httpbin-istio-proxy-wasm
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/component: httpbin-istio
  configPatches:
    - applyTo: EXTENSION_CONFIG
      match:
        context: SIDECAR_INBOUND
      patch:
        operation: ADD
        value:
          name: kaidotio.envoy-xauthrequest
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
            config:
              fail_open: true
              vm_config:
                runtime: envoy.wasm.runtime.v8
                allow_precompiled: true
                code:
                  remote:
                    http_uri:
                      uri: http://proxy-wasm.proxy-wasm.svc.cluster.local:8080/envoy_xauthrequest.wasm
                      cluster: outbound|8080||proxy-wasm.proxy-wasm.svc.cluster.local
                configuration:
                  "@type": type.googleapis.com/google.protobuf.StringValue
                  value: |
                    {
                      "log_level": "trace"
                    }
    - applyTo: EXTENSION_CONFIG
      match:
        context: SIDECAR_INBOUND
      patch:
        operation: ADD
        value:
          name: kaidotio.envoy-trusted-header
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
            config:
              fail_open: true
              vm_config:
                runtime: envoy.wasm.runtime.v8
                allow_precompiled: true
                code:
                  remote:
                    http_uri:
                      uri: http://proxy-wasm.proxy-wasm.svc.cluster.local:8080/envoy_trusted_header.wasm
                      cluster: outbound|8080||proxy-wasm.proxy-wasm.svc.cluster.local
                configuration:
                  "@type": type.googleapis.com/google.protobuf.StringValue
                  value: |
                    {
                      "mappings": [
                        {
                          "header_name": "x-auth-request-user",
                          "trusted_certs": [
                            {
                              "uri": "spiffe://cluster.local/ns/istio-gateways/sa/istio-ingressgateway-service-account"
                            }
                          ]
                        }
                      ]
                    }
    - applyTo: EXTENSION_CONFIG
      match:
        context: SIDECAR_INBOUND
      patch:
        operation: ADD
        value:
          name: kaidotio.header-getter
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
            config:
              fail_open: true
              vm_config:
                runtime: envoy.wasm.runtime.v8
                allow_precompiled: true
                code:
                  remote:
                    http_uri:
                      uri: http://proxy-wasm.proxy-wasm.svc.cluster.local:8080/header_getter.wasm
                      cluster: outbound|8080||proxy-wasm.proxy-wasm.svc.cluster.local
                configuration:
                  "@type": type.googleapis.com/google.protobuf.StringValue
                  value: |
                    {
                      "mappings": [
                        {
                          "key": "x-auth-request-user-original",
                          "header_name": "x-auth-request-user"
                        }
                      ]
                    }
    - applyTo: EXTENSION_CONFIG
      match:
        context: SIDECAR_INBOUND
      patch:
        operation: ADD
        value:
          name: kaidotio.header-setter
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
            config:
              fail_open: true
              vm_config:
                runtime: envoy.wasm.runtime.v8
                allow_precompiled: true
                code:
                  remote:
                    http_uri:
                      uri: http://proxy-wasm.proxy-wasm.svc.cluster.local:8080/header_setter.wasm
                      cluster: outbound|8080||proxy-wasm.proxy-wasm.svc.cluster.local
                configuration:
                  "@type": type.googleapis.com/google.protobuf.StringValue
                  value: |
                    {
                      "mappings": [
                        {
                          "key": "x-auth-request-user",
                          "header_name": "x-auth-request-user",
                          "override": false
                        },
                        {
                          "key": "x-auth-request-user-original",
                          "header_name": "x-auth-request-user",
                          "override": true
                        }
                      ]
                    }
    - applyTo: HTTP_FILTER
      match:
        context: SIDECAR_INBOUND
        listener:
          filterChain:
            filter:
              name: envoy.filters.network.http_connection_manager
              subFilter:
                name: istio.metadata_exchange
      patch:
        # istio.metadata_exchange deletes x-envoy-peer-metadata header
        operation: INSERT_BEFORE # WasmPlugin does not support INSERT_BEFORE to istio.metadata_exchange
        value:
          name: kaidotio.envoy-xauthrequest
          # https://github.com/envoyproxy/envoy/issues/33212#issuecomment-2052062339
          config_discovery:
            config_source:
              ads: {}
              initial_fetch_timeout: 0s
            type_urls:
              - type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
    - applyTo: HTTP_FILTER
      match:
        context: SIDECAR_INBOUND
        listener:
          filterChain:
            filter:
              name: envoy.filters.network.http_connection_manager
              subFilter:
                name: istio.metadata_exchange
      patch:
        operation: INSERT_BEFORE # WasmPlugin does not support INSERT_BEFORE to istio.metadata_exchange
        value:
          name: kaidotio.envoy-trusted-header
          # https://github.com/envoyproxy/envoy/issues/33212#issuecomment-2052062339
          config_discovery:
            config_source:
              ads: {}
              initial_fetch_timeout: 0s
            type_urls:
              - type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
    - applyTo: HTTP_FILTER
      match:
        context: SIDECAR_INBOUND
        listener:
          filterChain:
            filter:
              name: envoy.filters.network.http_connection_manager
              subFilter:
                name: envoy.filters.http.jwt_authn
      patch:
        # envoy.filters.http.jwt_authn(RequestAuthentication) deletes x-auth-request-user header
        operation: INSERT_BEFORE # spec.phase: AUTHN
        value:
          name: kaidotio.header-getter
          # https://github.com/envoyproxy/envoy/issues/33212#issuecomment-2052062339
          config_discovery:
            config_source:
              ads: {}
              initial_fetch_timeout: 0s
            type_urls:
              - type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
    - applyTo: HTTP_FILTER
      match:
        context: SIDECAR_INBOUND
        listener:
          filterChain:
            filter:
              name: envoy.filters.network.http_connection_manager
              subFilter:
                name: envoy.filters.http.jwt_authn
      patch:
        operation: INSERT_AFTER # spec.phase: AUTHZ
        value:
          name: kaidotio.header-setter
          # https://github.com/envoyproxy/envoy/issues/33212#issuecomment-2052062339
          config_discovery:
            config_source:
              ads: {}
              initial_fetch_timeout: 0s
            type_urls:
              - type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: httpbin-istio-access-log
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/component: httpbin-istio
  configPatches:
    - applyTo: NETWORK_FILTER
      match:
        context: SIDECAR_INBOUND
        listener:
          filterChain:
            filter:
              name: envoy.filters.network.http_connection_manager
      patch:
        operation: MERGE
        value:
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
            access_log:
              - name: envoy.access_loggers.file
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                  path: /dev/stdout
                  log_format:
                    json_format:
                      # http://ltsv.org/
                      time: "%START_TIME%"
                      host: "%DOWNSTREAM_REMOTE_ADDRESS_WITHOUT_PORT%"
                      forwardedfor: "%REQ(X-FORWARDED-FOR)%"
                      method: "%REQ(:METHOD)%"
                      uri: "%REQ(:PATH)%"
                      protocol: "%PROTOCOL%"
                      status: "%RESPONSE_CODE%"
                      size: "%BYTES_SENT%"
                      reqsize: "%BYTES_RECEIVED%"
                      referer: "%REQ(REFERER)%"
                      ua: "%REQ(USER-AGENT)%"
                      vhost: "%REQ(:AUTHORITY)%"
                      reqtime: "%DURATION%"
                      # Envoy specific fields
                      respflag: "%RESPONSE_FLAGS%"
                      # Additional fields
                      scheme: "%REQ(:SCHEME)%"
                      traceparent: "%REQ(TRACEPARENT)%"
                      "x-client-ip": "%REQ(X-CLIENT-IP)%"
                      xauthrequestuser: "%REQ(x-auth-request-user)%"
