cluster/manifests/httpbin/overlays/dev/authorization_policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: httpbin-istio
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: httpbin-istio
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces:
              - istio-system
            principals:
              - cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account
      when:
        - key: request.headers[host]
          values:
            - httpbin-istio.minikube.127.0.0.1.nip.io
    - from:
        - source:
            namespaces:
              - runner
      when:
        - key: request.auth.claims[iss]
          values:
            - https://token.actions.githubusercontent.com
        - key: request.auth.claims[repository]
          values:
            - kaidotio/hippocampus
